<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_scan">

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.galaxyfit3.ctl.ui.scan.ScanFragment"
        android:label="@string/scan" />

    <fragment
        android:id="@+id/nav_health"
        android:name="com.galaxyfit3.ctl.ui.health.HealthFragment"
        android:label="@string/health" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.galaxyfit3.ctl.ui.notifications.NotificationsFragment"
        android:label="@string/notifications" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.galaxyfit3.ctl.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>
